--- a/unattended_installer/config/filebeat/filebeat_all_in_one.yml
+++ b/unattended_installer/config/filebeat/filebeat_all_in_one.yml
@@ -2,8 +2,8 @@
 output.elasticsearch:
   hosts: ["127.0.0.1:9700"]
   protocol: https
-  username: "admin"
-  password: "admin"
+  username: ${username}
+  password: ${password}
   ssl.certificate_authorities:
     - /etc/filebeat/certs/root-ca.pem
   ssl.certificate: "/etc/filebeat/certs/filebeat.pem"
