--- a/unattended_installer/config/filebeat/filebeat_unattended.yml
+++ b/unattended_installer/config/filebeat/filebeat_unattended.yml
@@ -6,8 +6,8 @@ output.elasticsearch.hosts:
 
 output.elasticsearch:
   protocol: https
-  username: "admin"
-  password: "admin"
+  username: ${username}
+  password: ${password}
   ssl.certificate_authorities:
     - /etc/filebeat/certs/root-ca.pem
   ssl.certificate: "/etc/filebeat/certs/filebeat.pem"
