--- a/stack/indexer/deb/debian/rules
+++ b/stack/indexer/deb/debian/rules
@@ -93,7 +93,7 @@ override_dh_install:
 	cp -pr $(BASE_DIR)/* $(TARGET_DIR)$(INSTALLATION_DIR)
 
 	# Download demo certificates
-	curl -kOL https://s3.amazonaws.com/warehouse.wazuh.com/stack/demo-certs.tar.gz
+	curl -kOL https://packages-dev.wazuh.com/stack/demo-certs.tar.gz
 	tar xzvf demo-certs.tar.gz && rm -f demo-certs.tar.gz
 	mkdir -p $(TARGET_DIR)$(CONFIG_DIR)/certs/
 	cp certs/admin.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/
