--- a/stack/indexer/base/files/etc/wazuh-indexer/opensearch.yml
+++ b/stack/indexer/base/files/etc/wazuh-indexer/opensearch.yml
@@ -2,8 +2,8 @@ network.host: "0.0.0.0"
 node.name: "node-1"
 cluster.initial_master_nodes:
 - "node-1"
-- "node-2"
-- "node-3"
+#- "node-2"
+#- "node-3"
 cluster.name: "wazuh-cluster"
 #discovery.seed_hosts:
 #  - "node-1-ip"
@@ -35,13 +35,13 @@ plugins.security.ssl.transport.resolve_hostname: false
 
 plugins.security.audit.type: internal_opensearch
 plugins.security.authcz.admin_dn:
-- "CN=admin,OU=Docu,O=Wazuh,L=California,C=US"
+- "CN=admin,OU=Wazuh,O=Wazuh,L=California,C=US"
 plugins.security.check_snapshot_restore_write_privileges: true
 plugins.security.enable_snapshot_restore_privilege: true
 plugins.security.nodes_dn:
-- "CN=node-1,OU=Docu,O=Wazuh,L=California,C=US"
-#- "CN=node-2,OU=Docu,O=Wazuh,L=California,C=US"
-#- "CN=node-3,OU=Docu,O=Wazuh,L=California,C=US"
+- "CN=node-1,OU=Wazuh,O=Wazuh,L=California,C=US"
+#- "CN=node-2,OU=Wazuh,O=Wazuh,L=California,C=US"
+#- "CN=node-3,OU=Wazuh,O=Wazuh,L=California,C=US"
 plugins.security.restapi.roles_enabled:
 - "all_access"
 - "security_rest_api_access"
