Change wazuh_servers tag in config.yml

--- a/unattended_installer/config/certificate/config_aio.yml
+++ b/unattended_installer/config/certificate/config_aio.yml
@@ -2,8 +2,8 @@ nodes:
   indexer:
     name: indexer
     ip: 127.0.0.1
-  wazuh_servers:
-    name: filebeat
+  server:
+    name: server
     ip: 127.0.0.1
   dashboard:
     name: dashboard
