Replace elasticsearch in config.yml

--- a/unattended_installer/config/certificate/config.yml
+++ b/unattended_installer/config/certificate/config.yml
@@ -4,9 +4,9 @@ nodes:
     name: node-1
     ip: <indexer-node-ip>
     # name: node-2
-    # ip: <elasticsearch-node-ip>
+    # ip: <indexer-node-ip>
     # name: node-3
-    # ip: <elasticsearch-node-ip>
+    # ip: <indexer-node-ip>
 
   # Wazuh server nodes
   # Use node_type only with more than one Wazuh manager
