--- a/stack/dashboard/deb/debian/rules
+++ b/stack/dashboard/deb/debian/rules
@@ -85,6 +85,14 @@ override_dh_install:
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/opensearch_dashboards_config.js $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/server/opensearch_dashboards_config.js
 	cp $(TARGET_DIR)$(INSTALLATION_DIR)/etc/http_service.js $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/server/http/http_service.js
 
+	# Replace the redirection to `home` in the header logo
+	sed -i "s'/app/home'/app/wazuh'g" $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/target/public/core.entry.js
+	# Replace others redirections to `home`
+	sed -i 's/navigateToApp("home")/navigateToApp("wazuh")/g' $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/target/public/core.entry.js
+	# Build the compressed files
+	gzip -c $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/target/public/core.entry.js > $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/target/public/core.entry.js.gz
+	brotli -c $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/target/public/core.entry.js > $(TARGET_DIR)$(INSTALLATION_DIR)/src/core/target/public/core.entry.js.br
+
 
 	mkdir -p $(TARGET_DIR)$(INSTALLATION_DIR)/config
 
