Change some files from specs to base

--- a/stack/dashboard/rpm/docker/x86_64/Dockerfile
+++ b/stack/dashboard/rpm/docker/x86_64/Dockerfile
@@ -5,14 +5,7 @@ RUN yum clean all && yum update -y
 RUN yum install -y openssh-clients sudo gnupg \
     yum-utils epel-release redhat-rpm-config rpm-devel \
     zlib zlib-devel rpm-build autoconf automake \
-    glibc-devel libtool perl gcc make bc sed git \
-    gzip
-
-RUN git clone https://github.com/google/brotli.git
-
-RUN cd brotli && ./bootstrap && ./configure --prefix=/usr --bindir=/usr/bin --sbindir=/usr/sbin --libexecdir=/usr/lib64/brotli --libdir=/usr/lib64/brotli --datarootdir=/usr/share --mandir=/usr/share/man/man1 --docdir=/usr/share/doc \
-    && make && make install
-
+    glibc-devel libtool perl 
     
 
 # Add the scripts to build the RPM package
