--- a/stack/dashboard/deb/docker/amd64/Dockerfile
+++ b/stack/dashboard/deb/docker/amd64/Dockerfile
@@ -6,7 +6,7 @@ ENV DEBIAN_FRONTEND noninteractive
 RUN apt-get update && apt-get install -y apt-utils && \
     apt-get install -y \
     curl sudo wget expect gnupg build-essential \
-    devscripts equivs selinux-basics procps gawk brotli
+    devscripts equivs selinux-basics procps gawk
 
 # Add the script to build the Debian package
 ADD builder.sh /usr/local/bin/builder
