Add com.apple.system-task-ports.read entitlement for listing processes accurately

--- a/macos/entitlements.plist
+++ b/macos/entitlements.plist
@@ -18,5 +18,7 @@
     <true/>
     <key>com.apple.security.assets.movies.read-only</key>
     <true/>
+    <key>com.apple.system-task-ports.read</key>
+    <true/>
   </dict>
 </plist>
