--- a/unattended_installer/config/certificate/config.yml
+++ b/unattended_installer/config/certificate/config.yml
@@ -1,5 +1,5 @@
 nodes:
-  # Wazuh indexer server nodes
+  # Wazuh indexer nodes
   indexer:
     name: node-1
     ip: <indexer-node-ip>
@@ -18,7 +18,7 @@ nodes:
     # ip: <wazuh-manager-ip>
     # node_type: worker
 
-  # Wazuh dashboard node
+  # Wazuh dashboard nodes
   dashboard:
     name: dashboard
     ip: <dashboard-node-ip>
