--- a/stack/indexer/deb/debian/rules
+++ b/stack/indexer/deb/debian/rules
@@ -102,10 +102,16 @@ override_dh_install:
 	cp certs/demo-indexer-key.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/
 	cp certs/root-ca.pem $(TARGET_DIR)$(CONFIG_DIR)/certs/
 
+	# Build wazuh-cert-tool
+	/root/stack/indexer/deb/builder.sh -c
+
+	# Build wazuh-passwords-tool
+	/root/stack/indexer/deb/builder.sh -p
+
 	# Copy the security tools
-	cp $(REPO_DIR)/install_functions/wazuh-cert-tool.sh $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/tools/
-	cp $(REPO_DIR)/install_functions/wazuh-passwords-tool.sh $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/tools/
-	cp $(REPO_DIR)/config/certificate/config.yml $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/tools/config.yml
+	cp $(REPO_DIR)/wazuh-cert-tool.sh $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/tools/
+	cp $(REPO_DIR)/wazuh-passwords-tool.sh $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/tools/
+	cp /root/documentation-templates/wazuh/config.yml $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/tools/config.yml
 
 	# Copy Wazuh's config files for the security plugin
 	cp -pr $(REPO_DIR)/config/indexer/roles/roles_mapping.yml $(TARGET_DIR)$(INSTALLATION_DIR)/plugins/opensearch-security/securityconfig/
