--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -12,7 +12,7 @@ jobs:
       uses: tj-actions/changed-files@v18.4
       id: changed_files
       with:
-        path: 'unattended_installer'
+        path: unattended_installer
         
     - name: Display changed files cert_tool
       id: modified_files_list
