--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: jitterbit/get-changed-files@v1
         id: abc
         with:
-          format: space-delimited
+          format: 'csv'
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Printing
         run: |
