--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -4,10 +4,10 @@ on:
     branches: [ 'poc-shellcheck-to4.3', 'master' ]
 
 jobs:
-  get-file-changes:
+  Get-Changed-Files:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v2.1.0
       - name: get files
         uses: jitterbit/get-changed-files@v1
@@ -25,3 +25,12 @@ jobs:
         run: |
           echo ::set-output name=arch::$(echo 'cert-tool')
           echo "yes"
+          
+  Builder-Scripts:
+    runs-on: ubuntu-latest
+    needs: Get-Changed-Files
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: builder-sh
+        run: echo ${{ steps.modified_files_list.outputs.arch }}
