Added ignore to stack gradle generation files

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@ ova/Config_files/filebeat.yml
 *.csr
 *.srl
 *.pkg.tar.zst
+.gradle
+.java
+.cache
 wpk/versions
 solaris/packer/builds/
 solaris/packer/packer-solaris11_3-virtualbox/
