--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -19,14 +19,11 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Printing
         run: |
-          echo "All:"
           echo "${{ steps.changed_files.outputs.all }}"
       - name: Display changed files cert_tool
         id: modified_files_list
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: |
-          echo "::set-output name=arch::$(echo 'cert-tool')"
-          echo "yes"
+        run: echo "::set-output name=arch::cert-tool"
           
   Builder-Scripts:
     runs-on: ubuntu-latest
