--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -4,10 +4,10 @@ on:
     branches: [ 'poc-shellcheck-to4.3', 'master' ]
 
 jobs:
-  Get-Changed-Files:
+  get-changed-files:
     runs-on: ubuntu-latest
     outputs:
-      arch: ${{ steps.changed_files.outputs.arch }}
+      file: ${{ steps.changed_files.outputs.arch }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
@@ -27,8 +27,8 @@ jobs:
           
   Builder-Scripts:
     runs-on: ubuntu-latest
-    needs: Get-Changed-Files
+    needs: get-changed-files
     steps:
       - name: builder-sh
-        run: |
-          echo "var: ${{ needs.Get-Changed-Files.outputs.arch }} "
+        run: echo ${{ needs.get-changed-files.outputs.file }}
+  
