--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -4,10 +4,10 @@ on:
     branches: [ 'poc-shellcheck-to4.3', 'master' ]
 
 jobs:
-  job1:
+  get-files:
     runs-on: ubuntu-latest
     outputs:
-      file: ${{ steps.step1.outputs.test }}
+      file: ${{ steps.changed-file.outputs.param }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
@@ -21,14 +21,14 @@ jobs:
         run: |
           echo "${{ steps.changed_files.outputs.all }}"
       - name: Display changed files cert_tool
-        id: step1
+        id: changed-file
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: echo "::set-output name=test::cert-tool"
+        run: echo "::set-output name=param::cert-tool"
           
   Builder-Scripts:
     runs-on: ubuntu-latest
-    needs: job1
+    needs: get-files
     steps:
       - name: builder-sh
-        run: echo ${{ needs.job1.outputs.file }}
+        run: echo ${{ needs.get-files.outputs.file }}
   
