--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ ova/Config_files/filebeat.yml
 *.pkg.tar.zst
 .gradle
 .java
+stack/dashboard/base/output
+stack/indexer/base/output
 .cache
 wpk/versions
 solaris/packer/builds/
