--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -28,8 +28,8 @@ jobs:
         id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
-          JSON="${param ',password-tool'"
-          echo "::set-output name=param::password-tool"
+          JSON="${param ',password-tool'}"
+          echo "::set-output name=param::"${JSON}""
           
   Builder-Scripts:
     runs-on: ubuntu-latest
