--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -6,8 +6,6 @@ on:
 jobs:
   get-files:
     runs-on: ubuntu-latest
-    outputs:
-      file: ${{ steps.cert-tool.outputs.param }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2.1.0
@@ -17,24 +15,34 @@ jobs:
         with:
           format: 'csv'
           token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Printing
-        run: |
-          echo "${{ steps.changed_files.outputs.all }}"
+      - name: Create tools file
+        run: echo "" > tools.csv
       - name: Display changed files cert_tool
         id: cert-tool
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: echo "::set-output name=param::cert-tool"
+        run: echo " cert-tool" >> tools.csv
       - name: Display changed files passwords_tool
         id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: |
-          JSON="${param ',password-tool'}"
-          echo "::set-output name=param::"${JSON}""
-          
+        run: echo " passwords-tool" >> tools.csv
+      - name: cat tools
+        run: cat tools.csv
+
+  build-matrix:
+    runs-on: ubuntu-latest
+    steps:
+      - id: set-matrix
+        run: echo "::set-output name=tools_matrix::$(cat tools.csv | tr " " ",")"
+    outputs:
+      tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
+  
   Builder-Scripts:
     runs-on: ubuntu-latest
-    needs: get-files
+    needs: build-matrix
+    strategy:
+      matrix:
+        tools: ${{ fromJson(needs.build-matrix.outputs.tools_matrix) }}
     steps:
       - name: builder-sh
-        run: echo ${{ needs.get-files.outputs.file }}
+        run: echo ${{ matrix.tools }}
   
