--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -16,15 +16,15 @@ jobs:
           format: 'csv'
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create tools file
-        run: echo "" > tools.csv
+        run: echo "[" > tools.csv
       - name: Display changed files cert_tool
         id: cert-tool
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: echo " cert-tool" >> tools.csv
+        run: echo '{"tool":"cert-tool"}' >> tools.csv
       - name: Display changed files passwords_tool
         id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: echo " passwords-tool" >> tools.csv
+        run: echo '{",tool":"passwords-tool"}' >> tools.csv
       - name: cat tools
         run: cat tools.csv
 
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - id: set-matrix
-        run: echo "::set-output name=tools_matrix::$(cat tools.csv | tr " " ",")"
+        run: echo "::set-output name=tools_matrix::$(cat tools.csv | jq -c '[.[]| .tool]')"
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   
