--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -16,7 +16,7 @@ jobs:
           format: 'csv'
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Create tools file
-        run: echo "[" > tools.csv
+        run: echo "" > tools.csv
       - name: Display changed files cert_tool
         id: cert-tool
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
@@ -24,12 +24,13 @@ jobs:
       - name: Display changed files passwords_tool
         id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: echo '{",tool":"passwords-tool"}' >> tools.csv
+        run: echo ',{"tool":"passwords-tool"}' >> tools.csv
       - name: cat tools
         run: cat tools.csv
 
   build-matrix:
     runs-on: ubuntu-latest
+    needs: get-files
     steps:
       - id: set-matrix
         run: echo "::set-output name=tools_matrix::$(cat tools.csv | jq -c '[.[]| .tool]')"
