--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -27,6 +27,8 @@ jobs:
         run: echo ',{"tool":"passwords-tool"}' >> tools.json
       - name: Finish file
         run: echo "]" >> tools.json
+      - name: Finish file
+        run: echo "cat tools.json"
       - name: Build Matrix
         id: set-matrix
         run: echo "::set-output name=tools_matrix::$(cat tools.json | jq -c '[.[]| .tool]')"
