--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -31,7 +31,7 @@ jobs:
         id: set-matrix
         run: echo "::set-output name=tools_matrix::$(cat tools.json | jq -c '[.[]| .tool]')"
       - name: cat json
-        run: echo ${{ tools_matrix }}
+        run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   
