--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -20,11 +20,11 @@ jobs:
       - name: Display changed files cert_tool
         id: cert-tool
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: echo '{"tool":"cert-tool"}' >> tools.json
+        run: echo '{\"tool\":\"cert-tool\"}' >> tools.json
       - name: Display changed files passwords_tool
         id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: echo ',{"tool":"passwords-tool"}' >> tools.json
+        run: echo ',{\"tool\":\"passwords-tool\"}' >> tools.json
       - name: Finish file
         run: echo "]" >> tools.json
       - name: Build Matrix
@@ -40,7 +40,7 @@ jobs:
     needs: get-files
     strategy:
       matrix:
-        tools: ${{ fromJson(needs.build-matrix.outputs.tools_matrix) }}
+        tools: ${{ toJSON(needs.build-matrix.outputs.tools_matrix) }}
     steps:
       - name: builder-sh
         run: echo ${{ matrix.tools }}
