--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -20,16 +20,16 @@ jobs:
       - name: Display changed files cert_tool
         id: cert-tool
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: echo '{\"tool\":\"cert-tool\"}' >> tools.json
+        run: echo '\"cert-tool\"' >> tools.json
       - name: Display changed files passwords_tool
         id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: echo ',{\"tool\":\"passwords-tool\"}' >> tools.json
+        run: echo ',\"passwords-tool\"' >> tools.json
       - name: Finish file
         run: echo "]" >> tools.json
       - name: Build Matrix
         id: set-matrix
-        run: echo "::set-output name=tools_matrix::$(cat tools.json | jq -c '[.[]| .tool]')"
+        run: echo "::set-output name=tools_matrix::$(cat tools.json )"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
     outputs:
