--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -29,11 +29,20 @@ jobs:
         run: echo "]" >> tools.json
       - name: Build Matrix
         id: set-matrix
-        run: echo '''::set-output name=tools_matrix::{\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\\",\"config\":\"Release\"}]}'''
+        run: echo '::set-output name=tools_matrix::{\"include\":[{\"project\":\"foo\",\"config\":\"Debug\"},{\"project\":\"bar\\",\"config\":\"Release\"}]}'
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
+  
+  job2:
+    needs: get-files
+    runs-on: ubuntu-latest
+    strategy:
+      matrix: ${{fromJson(needs.build-matrix.outputs.tools_matrix)}}
+    steps:
+      - name: builder-sh
+        run: echo ${{ matrix.matrix }}
   
   Builder-Scripts:
     runs-on: ubuntu-latest
