--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -39,7 +39,7 @@ jobs:
     needs: get-files
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{fromJson(needs.build-matrix.outputs.tools_matrix)}}
+      matrix: ${{ fromJson(["cert-tool", "passwords-tool"]) }}
     steps:
       - name: builder-sh
         run: echo ${{ matrix.matrix }}
