--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -39,7 +39,7 @@ jobs:
     needs: get-files
     runs-on: ubuntu-latest
     strategy:
-      matrix: ${{ fromJson(["cert-tool", "passwords-tool"]) }}
+      matrix: ${{ fromJson({"data":[{"tool":"cert-tool"},{"tool":"passwords-tool"}]}) }}
     steps:
       - name: builder-sh
         run: echo ${{ matrix.matrix }}
