--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -31,7 +31,7 @@ jobs:
         id: set-matrix
         run: |
           TASKS=$(echo $(cat tools.json) | sed 's/ //g' )
-          echo "::set-output name=tools_matrix::$$TASKS"
+          echo "::set-output name=tools_matrix::$TASKS"
       - name: Build Matrix
         id: set-matrix-2
         run: |
