--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -4,46 +4,30 @@ on:
     branches: [ 'poc-shellcheck-to4.3', 'master' ]
 
 jobs:
-  get-files:
+  matrix:
     runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2.1.0
-      - name: Get Files
-        uses: jitterbit/get-changed-files@v1
-        id: changed_files
-        with:
-          format: 'csv'
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Create tools file
-        run: echo "[" > tools.json
-      - name: Display changed files cert_tool
-        id: cert-tool
-        if: contains(steps.changed_files.outputs.all, 'cert_tool')
-        run: echo '{\"tool\":\"cert-tool\"}' >> tools.json
-      - name: Display changed files passwords_tool
-        id: changed-file
-        if: contains(steps.changed_files.outputs.all, 'passwords_tool')
-        run: echo ',{\"tool\":\"passwords-tool\"}' >> tools.json
-      - name: Finish file
-        run: echo "]" >> tools.json
-      - name: Build Matrix
-        id: set-matrix
-        run: |
-          TASKS=$(echo $(cat tools.json) | sed 's/ //g' )
-          echo "::set-output name=tools_matrix::$TASKS"
-      - name: cat json
-        run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
     outputs:
-      tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
-  
-  Builder-Scripts:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - uses: actions/checkout@v2
+      - id: set-matrix
+        run: |
+          TASKS=$(echo $(["cert-tool","passwords-tool"]) | sed 's/ //g' )
+          echo "::set-output name=matrix::$TASKS"
+  builder:
     runs-on: ubuntu-latest
-    needs: get-files
+    needs: [ matrix ]
     strategy:
       matrix:
-        tools: ${{ fromJson(needs.get-files.outputs.tools_matrix) }}
+        cfg: ${{ fromJson(needs.matrix.outputs.matrix) }}
     steps:
       - name: builder-sh
-        run: echo ${{ matrix.tools }}
+        run: echo ${{ matrix.cfg }}
+  runner:
+    runs-on: ubuntu-latest
+    needs: [ matrix, builder ]
+    strategy:
+      matrix:
+        server: ${{ fromJson(needs.matrix.outputs.matrix) }}
+        client: ${{ fromJson(needs.matrix.outputs.matrix) }}
   
