--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -1,17 +1,45 @@
-name: build
-on: push
+name: pr-review
+on: 
+  pull_request:
+    branches: [ 'poc-shellcheck-to4.3', 'master' ]
+
 jobs:
-  job1:
+  get-files:
     runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.1.0
+      - name: Get Files
+        uses: jitterbit/get-changed-files@v1
+        id: changed_files
+        with:
+          format: 'csv'
+          token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create tools file
+        run: echo "{\"data\":[" > tools.json
+      - name: Display changed files cert_tool
+        id: cert-tool
+        if: contains(steps.changed_files.outputs.all, 'cert_tool')
+        run: echo '{\"tool\":\"cert-tool\"}' >> tools.json
+      - name: Display changed files passwords_tool
+        id: changed-file
+        if: contains(steps.changed_files.outputs.all, 'passwords_tool')
+        run: echo ',{\"tool\":\"passwords-tool\"}' >> tools.json
+      - name: Finish file
+        run: echo "]}" >> tools.json
+      - name: Build Matrix
+        id: set-matrix
+        run: |
+          TASKS=$(echo $(cat tools.json) | sed 's/ //g' )
+          echo "::set-output name=tools_matrix::$TASKS"
     outputs:
-      matrix: ${{ steps.set-matrix.outputs.matrix }}
-    steps:
-      - id: set-matrix
-        run: echo "::set-output name=matrix::{\"data\":[{\"tool\":\"cert-tool\"},{\"tool\":\"passwords-tool\"}]}"
-  job2:
-    needs: job1
+      tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
+  
+  Builder-Scripts:
     runs-on: ubuntu-latest
+    needs: get-files
     strategy:
-      matrix: ${{fromJSON(needs.job1.outputs.matrix)}}
+      matrix: ${{fromJson(needs.get-files.outputs.tools_matrix)}}
     steps:
-      - run: echo ${{ matrix.data.tool }}
+      - name: builder-sh
+        run: echo ${{ matrix.data.tool }}
