--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -18,11 +18,9 @@ jobs:
       - name: Create tools file
         run: echo '{\"data\":[' > tools.json
       - name: Display changed files cert_tool
-        id: cert-tool
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
         run: echo '{\"tool\":\"cert-tool\"}' >> tools.json
       - name: Display changed files passwords_tool
-        id: changed-file
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: echo ',{\"tool\":\"passwords-tool\"}' >> tools.json
       - name: Finish file
@@ -30,8 +28,7 @@ jobs:
       - name: Build Matrix
         id: set-matrix
         run: |
-          TASKS=$(echo $(cat tools.json))
-          echo "::set-output name=tools_matrix::$TASKS"
+          echo "::set-output name=tools_matrix::$(cat tools.json)"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
     outputs:
