--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build Matrix
         id: set-matrix
         run: |
-          TASKS=$(echo $(cat tools.json))
+          TASKS=$(echo $(cat tools.json) | sed 's/ //g')
           echo "::set-output name=tools_matrix::$TASKS"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
