--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -29,7 +29,7 @@ jobs:
         id: set-matrix
         run: |
           TASKS=$(echo $(cat tools.json) | sed 's/ //g')
-          echo "::set-output name=tools_matrix::$TASKS"
+          echo "::set-output name=tools_matrix::{\"data\":[{\"tool\":\"cert-tool\"},{\"tool\":\"passwords-tool\"}]}"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
     outputs:
