--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -29,12 +29,12 @@ jobs:
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
         run: |
           export json_var='{"tool":"cert-tool"}'
-          echo "::set-env name=json_var::$json_var"
+          echo "json_var=$json_var" >> $GITHUB_ENV
       - name: set password
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
           export json_var='{"tool":"passwords-tool"}'
-          echo "::set-env name=json_var::$json_var"
+          echo "json_var=$json_var" >> $GITHUB_ENV
       - name: Build Matrix
         id: set-matrix
         run: |
