--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -28,11 +28,11 @@ jobs:
       - name: set cert
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
         run: |
-          echo 'json_var=$json_var "{"tool":"cert-tool"}"' >> $GITHUB_ENV
+          echo 'var="{"tool":"cert-tool"}"' >> $GITHUB_ENV
       - name: set password
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
-          echo 'json_var=$json_var "{"tool":"passwords-tool"}"' >> $GITHUB_ENV
+          echo 'var="{"tool":"passwords-tool"}"' >> $GITHUB_ENV
       - name: Build Matrix
         id: set-matrix
         run: |
@@ -41,7 +41,7 @@ jobs:
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
       - name: echo json
-        run: echo "${{ env.json_var }}
+        run: echo "${{ env.var }}
     outputs:
       tools_matrix: ${{ steps.set-matrix.outputs.tools_matrix }}
   
