--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -28,11 +28,11 @@ jobs:
       - name: set cert
         if: contains(steps.changed_files.outputs.all, 'cert_tool')
         run: |
-          echo 'var="{"tool":"cert-tool"}"' >> $GITHUB_ENV
+          echo 'var=cert-tool' >> $GITHUB_ENV
       - name: set password
         if: contains(steps.changed_files.outputs.all, 'passwords_tool')
         run: |
-          echo 'var="{"tool":"passwords-tool"}"' >> $GITHUB_ENV
+          echo 'var=passwords-tool' >> $GITHUB_ENV
       - name: Build Matrix
         id: set-matrix
         run: |
