--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -29,7 +29,7 @@ jobs:
         id: set-matrix
         run: |
           TASKS=$(echo $("["${{ env.VAR }}"]"))
-          echo "::set-output name=tools_matrix::${TASKS}"
+          echo "::set-output name=tools_matrix::${{ env.VAR }}"
       - name: cat json
         run: echo ${{ steps.set-matrix.outputs.tools_matrix }}
       - name: echo json
