--- a/.github/workflows/pr-reviews.yml
+++ b/.github/workflows/pr-reviews.yml
@@ -41,7 +41,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: get-files
     strategy:
-      matrix: ${{fromJson(needs.get-files.outputs.tools_matrix)}}
+      matrix: 
+        tool: ${{ env.VAR }}
     steps:
       - name: builder-sh
         run: echo ${{ matrix }}
